--- a/index.html
+++ b/index.html
@@ -7,9 +7,52 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>hallo world</h1>
+    <div class="fixedcontainer">
+         <div class="slider">
+        <input type="range"min="1" max="200" value="1" name="" id="">
+ 
+    </div>
+       <div class="scrolled">asdfasdf</div>
+    </div>
+   
+   
+    <div class="container">
+        <div class="sampledivs">
+            <h1>this is element 1</h1>
+        </div>
+        <div class="sampledivs">
+            <h1>this is element 2</h1>
+        </div>
+        <div class="sampledivs">
+            <h1>this is element 3</h1>
+        </div>
+        <div class="sampledivs">
+            <h1>this is element 4</h1>
+        </div>
+        <div class="sampledivs">
+            <h1>this is element 5</h1>
+        </div>
+        <div class="sampledivs">
+            <h1>this is element 6</h1>
+        </div>
+        <div class="sampledivs">
+            <h1>this is element 7</h1>
+        </div>
+        <div class="sampledivs">
+            <h1>this is element 8</h1>
+        </div>
+        <div class="sampledivs">
+            <h1>this is element 9</h1>
+        </div>
+        <div class="sampledivs">
+            <h1>this is element 10</h1>
+        </div>
+
+
+    </div>
 
     <script src="jquery.min.js"></script>
     <script src="anime.min.js"></script>
+    <script src="app.js"></script>
 </body>
 </html>
