final edit completed

--- a/index.html
+++ b/index.html
@@ -12,41 +12,26 @@
         <input type="range"min="1" max="200" value="1" name="" id="">
  
     </div>
-       <div class="scrolled">asdfasdf</div>
+       <div class="scrolled">Scroll to see effect </div>
     </div>
-   
-   
+
     <div class="container">
         <div class="sampledivs">
-            <h1>this is element 1</h1>
+            <h1>element 1</h1>
         </div>
         <div class="sampledivs">
-            <h1>this is element 2</h1>
+            <h1>element 2</h1>
         </div>
         <div class="sampledivs">
-            <h1>this is element 3</h1>
+            <h1>element 3</h1>
         </div>
         <div class="sampledivs">
-            <h1>this is element 4</h1>
+            <h1>element 4</h1>
         </div>
         <div class="sampledivs">
-            <h1>this is element 5</h1>
+            <h1>element 5</h1>
         </div>
-        <div class="sampledivs">
-            <h1>this is element 6</h1>
-        </div>
-        <div class="sampledivs">
-            <h1>this is element 7</h1>
-        </div>
-        <div class="sampledivs">
-            <h1>this is element 8</h1>
-        </div>
-        <div class="sampledivs">
-            <h1>this is element 9</h1>
-        </div>
-        <div class="sampledivs">
-            <h1>this is element 10</h1>
-        </div>
+      
 
 
     </div>
